docs/cmdlets/v5.00/appliance/get-hpovscope.md
---
description: Get Scope resource(s)
---

# Get-HPOVScope

## Syntax

```text
Get-HPOVScope
    [-Name <String>]
    [-ApplianceConnection <Object>]
    [<CommonParameters>]
```

## Description

A scope is a grouping of resources that can be used to restrict the range of an operation or action. For example, you can create scopes based on:

* Organizations \(Marketing, Research and Development, Finance\)
* Usage \(Production, Development, Testing\)
* Skills \(Linux, Windows\)

The resources are arranged by categories. All the resources in these categories can be added to or removed from a scope:

* Enclosures
* Server Hardware
* Networks \(Ethernet, FC, and FCoE\)
* Network Sets
* Interconnects, excluding SAS resources
* Logical Interconnects, excluding SAS resources
* Logical Interconnect Groups, excluding SAS resources
* OS Deployment Plans
* Switches
* Logical Switches
* Logical Switch Groups
* Rack Managers
* Storage Pools
* Volumes
* Volume Templates
* Volume Sets

{% hint style="info" %}
Resources in other categories are considered to be included in all scopes, and they cannot be removed.
{% endhint %}

{% hint style="warning" %}
For email notification of alerts, resources that are not categorized here are included in any scope. An email notification filter that specifies one or more scopes does not eliminate alerts generated by resources that are not currently categorized here. Inhibiting alerts from non-scope resources requires the use of associated resource categories, which is described in "Edit an email recipient and filter entry" online help chapter.
{% endhint %}

When scopes are defined and resources assigned to them, you can:

* Restrict the resources displayed in the user interface \(UI\) to those assigned to the scope.
* Restrict user permissions to grant access only to the resources in a scope.
* Configure filtered email notifications for alerts based on previously-defined scopes.

Returned Scope object\(s\) will contain a collection of associated resources.

Minimum Minimum required privileges: Read-Only

## Examples

### Example 1

```text
Get-HPOVScope
```

List all available scopes on the connected default appliance.

### Example 2

```text
Get-HPOVScope -Name MyFinanceScope
```

Return the "MyFinanceScope" scope resource from the conncted default appliance.

### Example 3

```text
Get-HPOVScope -Name My* -ApplianceConnection $ConnectedSessions
```

Use wildcard search for a specific scope on all connected appliances.

## Parameters

### -Name &lt;String&gt;

Name of the scope to return.

| Aliases | None |
| :--- | :--- |
| Required? | False |
| Position? | Named |
| Default value |  |
| Accept pipeline input? | false |
| Accept wildcard characters? | False |

### -ApplianceConnection &lt;Object&gt;

Specify one or more `[HPOneView.Appliance.Connection]` object\(s\) or Name property value\(s\).

| Aliases | Appliance |  |
| :--- | :--- | :--- |
| Required? | False |  |
| Position? | Named |  |
| Default value | \`\(${Global:ConnectedSessions} | ? Default\)\` |
| Accept pipeline input? | false |  |
| Accept wildcard characters? | False |  |

### &lt;CommonParameters&gt;

This cmdlet supports the common parameters: Verbose, Debug, ErrorAction, ErrorVariable, WarningAction, WarningVariable, OutBuffer, PipelineVariable, and OutVariable. For more information, see about\_CommonParameters \([http://go.microsoft.com/fwlink/?LinkID=113216](http://go.microsoft.com/fwlink/?LinkID=113216)\)

## Input Types

_**None. You cannot pipe objects to this Cmdlet.**_

## Return Values

_**HPOneView.Appliance.ScopeCollection**_

Collection of Appliance Scope resource objects.

## Related Links

* [Add-HPOVResourceToScope](add-hpovresourcetoscope.md)
* [Remove-HPOVResourceFromScope](remove-hpovresourcefromscope.md)
* [New-HPOVScope](new-hpovscope.md)
* [Remove-HPOVScope](https://github.com/HewlettPackard/POSH-HPOneView-docs/tree/1915d3e6119cf820b69e9b5eb07cbe928a3cfdc7/docs/cmdlets/v5.00/appliance/remove-hpovscope.md)

